@@ -1,5 +1,6 @@
 profilematic (1.7.0) unstable; urgency=low
   * NFC condition
+  * Network connection type condition
   * Custom action sets correct environment so QML applications virtual keyboard works
 
  -- Arto Jalkanen <ajalkane@gmail.com>  Sat, 26 May 2012 21:00:00 +0300
